Extract components and add comprehensive unit tests for markdown export
Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>